mudanca layout, ajustes gerais

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
+<a
+  class="whatsapp-fixed"
+  href="https://wa.me/5511969589567?text=Ol%C3%A1%21%20Estou%20entrando%20em%20contato%20com%20a%20Mandela%20Vive%20Records.%20Vi%20o%20site%20de%20voc%C3%C3%AAs%20e%20gostaria%20de%20saber%20mais."
+  target="_blank"
+  aria-label="Fale conosco no WhatsApp"
+>
+  <img src="assets/mandela-imgs/icons8-whatsapp.gif" alt="WhatsApp" />
+</a>
+
+
 <router-outlet></router-outlet>
