--- a/src/app/midias/midias.component.html
+++ b/src/app/midias/midias.component.html
@@ -1,4 +1,4 @@
-<div class="carrossel-container">
+<div #midiasSection class="carrossel-container">
   <div class="midias-title" [class.animate-in]="animateTitle">MÍDIAS</div>
 
   <div class="video-wrapper">
