--- a/src/app/quem-somos/quem-somos.component.html
+++ b/src/app/quem-somos/quem-somos.component.html
@@ -1,6 +1,6 @@
-<section class="quem-somos">
+<section class="quem-somos" #quemSomosSection>
   <div class="container">
-    <h2 class="title">QUEM SOMOS?</h2>
+    <h2 class="title" [class.animate-in]="animateTitle">QUEM SOMOS?</h2>
 
     <p>
       A Mandela Vive Records é um selo musical e audiovisual fundado com o propósito de transformar e revolucionar o cenário da música brasileira, especialmente dentro do gênero funk mandelão.
@@ -27,7 +27,7 @@
 
 <div>
   <div class="fundo-lateral">QUEM</div>
-    <div class="fundo-lateral0">SOMOS?</div>
+  <div class="fundo-lateral0">SOMOS?</div>
 
 </div>
 </section>
