--- a/src/app/artistas/artistas/artistas.component.html
+++ b/src/app/artistas/artistas/artistas.component.html
@@ -1,12 +1,21 @@
-<div class="carrossel-container">
+<div class="carrossel-container" #artistasSection>
   <div class="artistas-title" [class.animate-in]="animateTitle">ARTISTAS</div>
 
-<div class="artistas-container">
-  <div class="artista-card" *ngFor="let artista of artistas">
-    <img [src]="artista.imagem" [alt]="artista.nome" />
-    <div class="overlay">
-      <h3>{{ artista.nome }}</h3>
-      <p *ngIf="artista.instagram">{{ artista.instagram }}</p>
+  <div class="artistas-container">
+    <div
+      class="artista-card"
+      *ngFor="let artista of artistas"
+      (mouseenter)="artista.hover = true"
+      (mouseleave)="artista.hover = false"
+    >
+      <img
+        [src]="artista.hover ? artista.imagemColor : artista.imagemPB"
+        [alt]="artista.nome"
+      />
+      <div class="overlay">
+        <h3>{{ artista.nome }}</h3>
+        <p *ngIf="artista.instagram">{{ artista.instagram }}</p>
+      </div>
     </div>
   </div>
 </div>
