--- a/src/app/como-funciona/como-funciona.component.scss
+++ b/src/app/como-funciona/como-funciona.component.scss
@@ -21,12 +21,18 @@
     z-index: 2;
     padding-right: 90px;
 
-    .title {
+      .title {
       font-family: 'Another Tag', sans-serif;
       font-size: 60px;
       margin-bottom: 30px;
       text-transform: uppercase;
+      transform: translateX(-150%);
+      transition: transform 1s ease-out;
     }
+
+    .title.animate-in {
+      transform: translateX(0);
+        }
 
       p {
         font-family: 'Roboto Condensed', sans-serif;
@@ -43,30 +49,30 @@
 
   .fundo-lateral {
     position: absolute;
-    right: 75%;
-    top: 45%;
+    right: 73%;
+    top: 67%;
     transform: rotate(-90deg) translateY(-50%);
     font-size: 120px;
-    font-weight: bold;
     color: black;
     white-space: nowrap;
     pointer-events: none;
     user-select: none;
     -webkit-text-stroke: 0.5px rgba(255, 255, 255, 0.1);
+    font-family: 'Urbanist', sans-serif;
 
   }
    .fundo-lateral0 {
     position: absolute;
     right: 55%;
-    top: 45%;
+    top: 54%;
     transform: rotate(-90deg) translateY(-50%);
     font-size: 120px;
-    font-weight: bold;
     color: black;
     white-space: nowrap;
     pointer-events: none;
     user-select: none;
    -webkit-text-stroke: 0.5px rgba(255, 255, 255, 0.1);
+   font-family: 'Urbanist', sans-serif;
   }
 }
 
@@ -80,6 +86,7 @@
   height: 90px;
   object-fit: cover;
   border-radius: 12px;
+  width: 100%;
 }
 
 .item .text {
@@ -91,3 +98,36 @@
   font-weight: bold;
   font-size: 1.2rem;
 }
+
+
+@media (max-width: 1340px) {
+  .fundo-lateral {
+    font-size: 80px !important;
+    right: 81% !important;
+
+  }
+  .fundo-lateral0{
+    font-size: 80px !important;
+    right: 66% !important;
+
+  }
+}
+
+
+@media (max-width: 1210px) {
+  .fundo-lateral {
+    display: none;
+
+  }
+  .fundo-lateral0{
+    display: none;
+  }
+  .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 40px !important;
+    padding-right: 40px !important;
+  }
+}
+
