--- a/src/app/contato/contato/contato.component.scss
+++ b/src/app/contato/contato/contato.component.scss
@@ -4,7 +4,6 @@
   font-family: 'Roboto Condensed', sans-serif;
   padding: 40px 20px;
   background-image: url('/assets/mandela-imgs/fundo rodape.jpg');
-
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -14,13 +13,14 @@
     justify-content: space-between;
     max-width: 1200px;
     margin: auto;
+    align-items: center;
 
     .footer-section {
       flex: 1 1 200px;
       margin: 10px;
 
       h3 {
-        font-size: 16px;
+        font-size: 40px;
         margin-bottom: 10px;
         font-family: Fresco Stamp;
       }
