--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -76,13 +76,11 @@ body, html {
 
 .logo-mandela img {
   width: 620px;
-  transition: width 0.6s ease; // <- transição suave
-
+  transition: width 0.6s ease;
   &:hover {
     width: 800px;
     cursor: pointer;
-  }
-}
+  }}
 
 
 /* Menu inferior */
@@ -102,10 +100,11 @@ body, html {
   position: relative;
   color: white;
   text-decoration: none;
-  font-weight: bold;
   font-size: 20px;
   transition: color 0.3s;
+  cursor: pointer;
 }
+
 
 .menu a::after {
   content: '';
@@ -150,3 +149,97 @@ body, html {
 .content-components{
   margin-top: 30px;
 }
+
+
+
+
+
+
+/* sidebar.component.css */
+
+.custom-sidebar {
+  position: fixed;
+  top: 0;
+  left: -100%;
+  width: 75vw;
+  height: 100vh;
+  background: linear-gradient(135deg, #111, #1a1a1a);
+  color: white;
+  padding-top: 60px;
+  transition: left 0.3s ease;
+  z-index: 1000;
+  box-shadow: 3px 0 10px rgba(0,0,0,0.5);
+  border-right: 2px solid #fff2;
+}
+
+.custom-sidebar.open {
+  left: 0;
+}
+
+.custom-sidebar nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  text-align: left;
+}
+
+.custom-sidebar nav ul li {
+  margin: 20px 0;
+}
+
+.custom-sidebar nav ul li a {
+  color: white;
+  text-decoration: none;
+  letter-spacing: 1px;
+  padding-left: 20px;
+  display: block;
+  border-left: 4px solid transparent;
+  transition: all 0.3s ease;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 16px;
+}
+
+.custom-sidebar nav ul li a:hover {
+  border-left: 4px solid #fff;
+  background-color: #222;
+}
+
+/* Botão flutuante */
+.sidebar-toggle {
+  display: none;
+  position: absolute;
+  top: 20px;
+  z-index: 1100;
+  background-color: #000;
+  border: none;
+  color: white;
+  font-size: 26px;
+  padding: 10px 14px;
+  border-radius: 8px;
+  box-shadow: 0 0 8px rgba(0,0,0,0.4);
+  cursor: pointer;
+}
+
+.sidebar-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 900;
+}
+
+
+
+@media (max-width: 724px) {
+  .menu {
+    display: none;
+  }
+  .sidebar-toggle{
+    display: block;
+  }
+}
+
+
+
