--- a/src/app/quem-somos/quem-somos.component.scss
+++ b/src/app/quem-somos/quem-somos.component.scss
@@ -24,7 +24,14 @@
       font-size: 60px;
       margin-bottom: 30px;
       text-transform: uppercase;
+      transform: translateX(-150%);
+      transition: transform 1s ease-out;
     }
+
+    .title.animate-in {
+      transform: translateX(0);
+        }
+
 
       p {
         font-family: 'Roboto Condensed', sans-serif;
@@ -41,29 +48,62 @@
 
   .fundo-lateral {
     position: absolute;
-    right: -30px;
-    top: 45%;
+    right: 20px;
+    top: 25%;
     transform: rotate(90deg) translateY(-50%);
     font-size: 120px;
-    font-weight: bold;
     color: black;
     white-space: nowrap;
     pointer-events: none;
     user-select: none;
     -webkit-text-stroke: 0.5px rgba(255, 255, 255, 0.1);
+    font-family: 'Urbanist', sans-serif;
 
   }
    .fundo-lateral0 {
     position: absolute;
     right: 80px;
-    top: 45%;
+    top: 35%;
     transform: rotate(90deg) translateY(-50%);
     font-size: 120px;
-    font-weight: bold;
     color: black;
     white-space: nowrap;
     pointer-events: none;
     user-select: none;
    -webkit-text-stroke: 0.5px rgba(255, 255, 255, 0.1);
+   font-family: 'Urbanist', sans-serif;
+  }
+}
+
+
+// ADPATACAO MOBILE
+
+
+@media (max-width: 1340px) {
+  .fundo-lateral {
+    font-size: 80px !important;
+
+  }
+  .fundo-lateral0{
+    font-size: 80px !important;
+    right: 12px !important;
+  }
+}
+
+
+@media (max-width: 1210px) {
+  .fundo-lateral {
+    display: none;
+
+  }
+  .fundo-lateral0{
+    display: none;
+  }
+  .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 40px !important;
+    padding-right: 40px !important;
   }
 }
