--- a/src/app/contato/contato/contato.component.html
+++ b/src/app/contato/contato/contato.component.html
@@ -29,6 +29,6 @@
 
   <div class="footer-bottom">
     <span>Mandela Vive Records © Todos os direitos reservados.</span>
-    <span>Site produzido por <strong>Architecture Technological</strong></span>
+    <span>Site produzido por <strong><a target="_blank" href="https://architecturetechnological.com/">Architecture Technological</a></strong></span>
   </div>
 </footer>
