--- a/src/app/contato/contato/contato.component.scss
+++ b/src/app/contato/contato/contato.component.scss
@@ -62,6 +62,15 @@
     span {
       display: block;
       margin: 5px 0;
+
+      a{
+        text-decoration: none;
+        color: #fff;
+      }
+
+      a:hover{
+        color: #1167A4;
+      }
     }
 
     strong {
