--- a/src/app/contato/contato/contato.component.scss
+++ b/src/app/contato/contato/contato.component.scss
@@ -23,6 +23,7 @@
         font-size: 40px;
         margin-bottom: 10px;
         font-family: Fresco Stamp;
+        font-weight: 100;
       }
 
       ul {
