alteracoes foto e adicao de artistas

--- a/src/app/contato/contato/contato.component.html
+++ b/src/app/contato/contato/contato.component.html
@@ -6,12 +6,13 @@
     </div>
 
     <div class="footer-section redes">
-      <h3>REDE SOCIAIS</h3>
+      <h3>REDES SOCIAIS</h3>
       <ul>
         <li><img src="assets/mandela-imgs/icone youtube topo.svg" class="fab fa-youtube">MANDELA VIVE</li>
         <li><img src="assets/mandela-imgs/icone youtube topo.svg" class="fab fa-youtube">MANDELÃO ZONA NORTE</li>
         <li><img src="assets/mandela-imgs/icone spotfy topo.svg" class="fab fa-facebook">MANDELA VIVE</li>
         <li><img src="assets/mandela-imgs/icone instagram rodape.svg" class="fab fa-instagram">&#64;MANDELAVIVERECORDS</li>
+        <li><img src="assets/mandela-imgs/icone instagram rodape.svg" class="fab fa-instagram">&#64;MANDELAOZONANORTE</li>
 
 
       </ul>
@@ -20,9 +21,16 @@
     <div class="footer-section contato">
       <h3>CONTATO</h3>
       <ul>
-        <li><i class="fas fa-phone-alt"></i> (11) 96958-9567 - PEDRO</li>
-        <li><i class="fas fa-envelope"></i> CONTATOMANDELAVIVE&#64;GMAIL.COM</li>
-
+        <div class="contato-email-phone">
+          <div class="contato-phone-email">
+            <img src="assets/mandela-imgs/icone telefone rodape.svg" alt="">
+            <li><i class="fas fa-phone-alt"></i> (11) 96958-9567 - PEDRO</li>
+          </div>
+          <div class="contato-phone-email">
+            <img src="assets/mandela-imgs/icone email rodape.svg" alt="">
+            <li><i class="fas fa-envelope"></i> CONTATOMANDELAVIVE&#64;GMAIL.COM</li>
+          </div>
+        </div>
       </ul>
     </div>
   </div>
