--- a/src/app/contato/contato/contato.component.scss
+++ b/src/app/contato/contato/contato.component.scss
@@ -78,4 +78,10 @@
       font-weight: bold;
     }
   }
+  .contato-phone-email{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    margin-bottom: 5px;
+  }
 }
