--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,6 +7,7 @@
       <a target="_blank" href="https://youtube.com/@mandelaviverecords?si=gkRJKatBZvdFCLQO"><img src="assets/mandela-imgs/icone youtube topo.svg" alt="YouTube"></a>
       <a target="_blank" href="https://youtube.com/@mandelaozonanorte?si=zPVXA-mGjFXxvsqb"><img src="assets/mandela-imgs/icone youtube topo.svg" alt="YouTube"></a>
       <a target="_blank" href="https://www.instagram.com/mandelaviverecords/"><img src="assets/mandela-imgs/icone instagram topo.svg" alt="Instagram"></a>
+      <a target="_blank" href="https://www.instagram.com/mandelaozonanorte?igsh=dWpobmllY3Q5M2wy"><img src="assets/mandela-imgs/icone instagram topo.svg" alt="Instagram"></a>
     </div>
   </div>
 
